src/App.module.scss
@use './styles/mixins' as m;
@import './styles/variables.scss';

.app {
  background-color: $background-color-2;
  color: $text-color;
  display: grid;
  grid-template-columns: minmax(20rem, 25rem) 1fr;
  min-height: 100vh;

  @include m.breakpoint-max('md') {
    display: flex;
    flex-direction: column;
    gap: 1rem;
  }
}

